# MoltenVKbarriertest

./: .gitignore  CMakeLists.txt  README.md  barrier_only.spvasm  generate_blobs.py  memorybarrier_plus_barrier.spvasm  run_all_test.sh
cmake/: DetectVulkanSDK.cmake
data/: README.md
docs/: expected_behavior.md  issue_template.md  notes_on_spirv.md
metal/: barrier_test.metal  build.sh  main.swift
metal-barrier-bug/: barrier_test.metal  build.sh  main.swift
metal_bug/: README.md  main.swift
metal_from_dumps/: main.swift
scripts/: build_macos.sh  compile_shaders.sh  dump_spirv.sh  generate_fft_blobs.py  run_repro.sh
shaders/: barrier_only.comp  common.glsl  groupmemorybarrier_plus_barrier.comp  memorybarrier_plus_barrier.comp
src/: buffer_utils.cpp  buffer_utils.hpp  compute_pipeline.cpp  compute_pipeline.hpp  main.cpp  shader_utils.cpp  shader_utils.hpp  vulkan_context.cpp  vulkan_context.hpp
vulkan/: barrier_test.comp  build.sh  main.cpp  run.sh  select_toolchain.sh
vulkan/shader_dump/: shader-cs-09d44a25441d4ba7.metal  shader-cs-c958ee748730720d.metal  shader-cs-e833cb2053493147.metal  shader-cs-fd8c69dda4eb07ed.metal
